// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Es hora de las instantáneas Siempre fallara la instantánea 1`] = `
Object {
	"createAt": Any<Date>,
	"id": Any<Number>,
}
`;

exports[`Es hora de las instantáneas Snapshot 1`] = `
Object {
	"gender": "Male",
	"id": 1,
	"name": "Rick Sanchez",
	"species": "Human",
	"status": "Alive",
}
`;

exports[`Es hora de las instantáneas Tenemos excepciones 1`] = `
Object {
	"id": Any<Number>,
	"name": "Oscar Barajas",
}
`;
